--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,24 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar-expand .navbar-nav {
+  flex-direction: row;
+  display: flex;
+  margin: auto;
+  gap: 20px;
+  text-decoration: none;
+  color: pink;
+}
+
+.navbar-nav a {
+  text-decoration: none;
+  color: pink;
+}
+
+.header-img {
+  vertical-align: middle;
+  width: 100vw;
+  height: 50vh;
 }
