--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow&family=Julius+Sans+One&family=Righteous&display=swap');
+
+html, body {
+  height: 100%;
+}
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: url("../public/background.jpg")!important;
+  font-family: 'Archivo Narrow', sans-serif!important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 
 .navbar-expand .navbar-nav {
   flex-direction: row;
@@ -23,6 +20,8 @@ code {
   gap: 20px;
   text-decoration: none;
   color: pink;
+  background-color: #ebebeb!important;
+  --bs-bg-opacity: 0;
 }
 
 .navbar-nav a {
@@ -34,4 +33,183 @@ code {
   vertical-align: middle;
   width: 100vw;
   height: 50vh;
+}
+
+.img-home-craft {
+  height: 20rem;
+}
+
+.container-home-craft {
+  font-family: 'Julius Sans One', sans-serif!important;
+  width: 90%;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.register-container h3 {
+  font-family: 'Julius Sans One', sans-serif!important;
+  text-align: center;
+  margin-top: 10vh;
+}
+
+.register-form {
+  font-family: 'Julius Sans One', sans-serif!important;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 5vh;
+  background-color: #cfdbb4;
+  border-radius: 10px;
+  padding-top: 20px;
+}
+
+.register-check {
+  font-family: 'Julius Sans One', sans-serif!important;
+  display: flex;
+  justify-content: center;
+}
+
+.register-buttom {
+  font-family: 'Julius Sans One', sans-serif!important;
+  background-color: #a6cc4e!important;
+  hover:bg-sky-700
+}
+
+.register.z-0 {
+  border-bottom: 1px solid #c8cfb6;
+}
+
+.footer-container {
+  height: 50px;
+  background-color: #f5b2b85e!important;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+    width: 100vw;
+    bottom: 0;
+}
+
+.footer-container a {
+  text-decoration: none;
+}
+
+.footer-logo {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-box {
+  background-color: #f5b2b85e!important;
+}
+
+#root {
+  min-height: 100%;
+  margin-bottom: -100px; 
+}
+
+/* .footer-container, #root:after {
+  height: 50px
+} */
+
+#root:after {
+  content: "";
+  display: block;
+}
+
+.nav-container {
+  background-image: url("../public/hands.jpg");
+  height: 25vh;
+  background-repeat: round;
+}
+
+@media (min-width: 1000px) {
+    .nav-container {
+    height: 40vh;
+  }
+}
+
+.show-craft-container {
+  margin: 0 auto;
+  width: 90vw;
+  margin-top: 2vh;
+}
+
+.link-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  position: relative;
+  z-index: 0;
+}
+
+.link-container a {
+  font-family: 'Righteous', cursive;
+  font-size: 1.5em;
+}
+
+.link-one {
+  color: #53d9d1;
+  transition: color 1s cubic-bezier(0.32, 0, 0.67, 0);
+  line-height: 1em;
+}
+
+.link-two {
+  color: #53d9d1;
+  transition: color 1s cubic-bezier(0.32, 0, 0.67, 0);
+  line-height: 1em;
+}
+
+.link-three {
+  color: #53d9d1;
+  transition: color 1s cubic-bezier(0.32, 0, 0.67, 0);
+  line-height: 1em;
+}
+
+.upload-craft-container {
+  font-family: 'Julius Sans One', sans-serif!important;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 5vh;
+  background-color: #cfdbb4;
+  border-radius: 10px;
+  padding-top: 20px;
+  
+}
+
+.upload-craft-container .w-full {
+  background-color: #b6c692;
+  width: 95%;
+  margin: 0 auto;
+}
+
+.upload-craft-container li {
+  padding-left: 0
+}
+
+.upload-craft-container label {
+  margin-left: 15px;
+  padding-left: 10px;
+}
+
+.label-parents ol, ul {
+  padding-left: 0!important;
+}
+
+.upload-button {
+  background-color: #cfdbb4!important;
+  width: auto!important;
+  margin: 0 auto;
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.upload-button:hover {
+  background-color: #b6c692;
+}
+
+.upload-craft-form h3 {
+  font-family: 'Julius Sans One', sans-serif!important;
+  text-align: center;
+  margin-top: 5vh;
 }
